forgot Chat merged + why imageview instead of normal button?

--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -26,9 +26,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-
-
-                <com.google.android.material.button.MaterialButton
+                <Button
                     android:id="@+id/button"
                     style="@style/PrimaryOutlineButton"
                     app:icon="@drawable/baseline_menu_24"
