--- a/app/src/main/res/layout/fragment_notify.xml
+++ b/app/src/main/res/layout/fragment_notify.xml
@@ -8,7 +8,7 @@
     tools:context=".customer.fragments.NotifyFragment">
 
     <TextView
-        android:id="@+id/customer_notify"
+        android:id="@+id/notify"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -127,131 +127,10 @@
             android:textStyle="bold"/>
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/dynamic_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:paddingStart="0dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        android:background="@drawable/notify_border">
-        <ImageView
-            android:id="@+id/ic_notify1"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="5dp"
-            android:src="@drawable/ic_notify"
-            android:background="@drawable/circle_notify_background"/>
-
-        <TextView
-            android:id="@+id/news2"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:text="Tin tức"
-            android:textStyle="bold"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="1dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"/>
-
-        <TextView
-            android:id="@+id/text_notify1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chưa có tin tức nào"
-            android:textSize="16sp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="20dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:paddingStart="0dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        android:background="@drawable/notify_border">
-        <ImageView
-            android:id="@+id/ic_notify2"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="5dp"
-            android:src="@drawable/ic_notify"
-            android:background="@drawable/circle_notify_background"/>
-
-        <TextView
-            android:id="@+id/news3"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:text="Tin tức"
-            android:textStyle="bold"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="1dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"/>
-
-        <TextView
-            android:id="@+id/text_notify2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chưa có tin tức nào"
-            android:textSize="16sp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="20dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:paddingStart="0dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        android:background="@drawable/notify_border">
-        <ImageView
-            android:id="@+id/ic_notify"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="5dp"
-            android:src="@drawable/ic_notify"
-            android:background="@drawable/circle_notify_background"/>
-
-        <TextView
-            android:id="@+id/news1"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:text="Tin tức"
-            android:textStyle="bold"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="1dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"/>
-
-        <TextView
-            android:id="@+id/text_notify3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chưa có tin tức nào"
-            android:textSize="16sp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="20dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"/>
-
-    </RelativeLayout>
-
+        android:orientation="vertical"/>
 
 </LinearLayout>
