--- a/app/src/main/res/navigation/nav_admin_graph.xml
+++ b/app/src/main/res/navigation/nav_admin_graph.xml
@@ -53,6 +53,12 @@
         android:name="com.example.myandroidproject.admin.fragment.AdminChatFragment"
         android:label="fragment_admin_chat"
         tools:layout="@layout/fragment_chat_admin" />
+
+    <fragment
+        android:id="@+id/admin_notify"
+        android:name="com.example.myandroidproject.admin.fragment.AdminNotifyFragment"
+        android:label="fragment_admin_notify"
+        tools:layout="@layout/fragment_admin_notify" />
     <action android:id="@+id/action_global_admin_chat" app:destination="@id/admin_chat" />
     <action android:id="@+id/fragment_admin_chat_storage" app:destination="@id/admin_chat_storage"/>
 
