--- a/app/src/main/res/layout/list_order_item.xml
+++ b/app/src/main/res/layout/list_order_item.xml
@@ -1,90 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/pressHere"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingVertical="10dp"
+    android:paddingVertical="20dp"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
     android:gravity="center_vertical"
-    android:weightSum="8"
     tools:context=".ShipperListOrder">
 
-    <ImageView
-        android:id="@+id/oderIMG"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_weight="1"
-        android:src="@drawable/img_4" />
-
-    <LinearLayout
-        android:layout_width="0dp"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="6dp"
-        android:layout_weight="6"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/orderName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Đơn Hàng"
-            android:textSize="24dp"
-            android:textStyle="bold" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginHorizontal="6dp"
-            android:layout_weight="6"
-            android:orientation="horizontal">
-        <TextView
-            android:id="@+id/whichCar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="     Trạng Thái:  "
-            android:textSize="18dp"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="NaS "
-            android:textSize="18dp"
-            android:textStyle="bold" />
-        </LinearLayout>
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="-20dp"
+        android:alpha="0.9">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="6dp"
-            android:layout_weight="6"
             android:orientation="horizontal">
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ngày Giao Hàng: "
-            android:textSize="15dp" />
 
-         <TextView
-            android:id="@+id/dateShipping"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="22/22/123073819"
-            android:textSize="15dp" />
+            <ImageView
+                android:id="@+id/oderIMG"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/img_4" />
 
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="6dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/orderName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Đơn Hàng"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="6dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/whichCar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Trạng Thái: "
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="NaS"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="6dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Ngày Giao Hàng: "
+                        android:textSize="15sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/dateShipping"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Em Dep Nhu Ngay Anh Mat Em"
+                        android:textSize="15sp" />
+
+                </LinearLayout>
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp" />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:paddingHorizontal="10dp"
+                android:src="@drawable/baseline_chevron_right_24" />
         </LinearLayout>
-    </LinearLayout>
-
-    <ImageView
-        android:layout_width="24dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:paddingHorizontal="10dp"
-        android:src="@drawable/baseline_chevron_right_24" />
-
-
-</LinearLayout>
+    </androidx.cardview.widget.CardView>
+</RelativeLayout>
