--- a/app/src/main/res/navigation/nav_shipper_graph.xml
+++ b/app/src/main/res/navigation/nav_shipper_graph.xml
@@ -3,13 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_shipper_graph"
-    app:startDestination="@id/shipper_order">
+    app:startDestination="@id/shipper_order_item">
 
     <fragment
-        android:id="@+id/shipper_order"
+        android:id="@+id/shipper_order_item"
         android:name="com.example.myandroidproject.shipper.fragment.ShipperOrderFragment"
         android:label="activity_shipper_order_fragment"
-        tools:layout="@layout/activity_shipper_order_fragment" />
+        tools:layout="@layout/activity_shipper_order_fragment" >
+        <action
+            android:id="@+id/action_shipper_order_item_to_takingOrderFragment"
+            app:destination="@id/takingOrderFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/takingOrderFragment"
+        android:name="com.example.myandroidproject.shipper.fragment.TakingOrderFragment"
+        android:label="shipper_take_order"
+        tools:layout="@layout/shipper_take_order" >
+        <action
+            android:id="@+id/action_takingOrderFragment_to_shipper_order_item"
+            app:destination="@id/shipper_order_item" />
+    </fragment>
 
 
 </navigation>
