--- a/app/src/main/res/layout/fragment_notify.xml
+++ b/app/src/main/res/layout/fragment_notify.xml
@@ -131,6 +131,11 @@
         android:id="@+id/dynamic_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"/>
+        android:orientation="vertical"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="1dp"
+        android:background="@drawable/border_background">
+
+    </LinearLayout>
 
 </LinearLayout>
