--- a/app/src/main/res/layout/fragment_admin_user_detail.xml
+++ b/app/src/main/res/layout/fragment_admin_user_detail.xml
@@ -87,27 +87,6 @@
                         android:textSize="12sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
-
-                <RadioGroup
-                    android:id="@+id/radioGenderGroup"
-                    android:layout_width="381dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <RadioButton
-                        android:id="@+id/radioMale"
-                        android:layout_width="135dp"
-                        android:layout_height="wrap_content"
-                        android:text="Nam" />
-
-                    <RadioButton
-                        android:id="@+id/radioFemale"
-                        android:layout_width="125dp"
-                        android:layout_height="wrap_content"
-                        android:text="Nữ" />
-                </RadioGroup>
-
-
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -132,9 +111,69 @@
                         android:layout_width="match_parent"
                         android:layout_height="56dp"
                         android:hint="Birthday"
-                        android:inputType="date"
+                        android:inputType="none"
+                        android:clickable="true"
+                        android:cursorVisible="false"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
                         android:textSize="12sp" />
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Giới tính"
+                        android:layout_marginEnd="50dp"/>
+
+                    <RadioGroup
+                        android:id="@+id/radioGenderGroup"
+                        android:layout_width="381dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <RadioButton
+                            android:id="@+id/radioMale"
+                            android:layout_width="135dp"
+                            android:layout_height="wrap_content"
+                            android:text="Nam" />
+
+                        <RadioButton
+                            android:id="@+id/radioFemale"
+                            android:layout_width="125dp"
+                            android:layout_height="wrap_content"
+                            android:text="Nữ" />
+                    </RadioGroup>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Quyền hạn"/>
+
+                    <Spinner
+                        android:id="@+id/role_input"
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        />
+
+                </LinearLayout>
+
+                <CheckBox
+                    android:id="@+id/can_send_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Cho phép nhận và gửi tin nhắn tới người dùng"/>
 
                 <GridLayout
                     android:layout_width="match_parent"
