--- a/app/src/main/res/menu/activity_admin_menu.xml
+++ b/app/src/main/res/menu/activity_admin_menu.xml
@@ -32,7 +32,9 @@
             <item
                 android:id="@+id/admin_chat_storage"
                 android:icon="@drawable/message"
-                android:title="Chat" />
+                android:title="Chat"
+                android:enabled="false"
+                android:visible="false"/>
 
             <item
                 android:id="@+id/admin_notify"
