--- a/app/src/main/res/navigation/nav_home_graph.xml
+++ b/app/src/main/res/navigation/nav_home_graph.xml
@@ -39,7 +39,7 @@
     <fragment
         android:id="@+id/customer_trip"
         android:name="com.example.myandroidproject.customer.fragments.TripFragment"
-        android:label="YourJourneyActivity" />
+        android:label="trip_fragment" />
 
     <fragment
         android:id="@+id/customer_chat"
